testdata/baselines/reference/submodule/compiler/jsdocResolveNameFailureInTypedef.errors.txt
/a.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
/a.js(7,14): error TS2304: Cannot find name 'CantResolveThis'.


==== /a.js (2 errors) ====
    /**
     * @param {Ty} x
               ~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f(x) {}
    
    /**
     * @typedef {CantResolveThis} Ty
                 ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CantResolveThis'.
     */
    